force-app/main/default/objects/StripeSubscription__c/StripeSubscription__c.object-meta.xml
<CustomObject>
    <label>Stripe Subscription</label>
    <nameField>
        <displayFormat>SUB-{0000}</displayFormat>
        <label>Stripe Subscription</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>