force-app/main/default/objects/StripeSubscription__c/fields/Current_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Current_Period_Start__c</fullName>
    <label>Current Period Start</label>
    <type>DateTime</type>
</CustomField>