force-app/main/default/objects/StripeSubscription__c/fields/Default_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Payment Method</label>
    <referenceTo>StripePaymentMethod__c</referenceTo>
    <relationshipName>StripeSubscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>