force-app/main/default/objects/StripeSubscription__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>StripePlan</label>
    <referenceTo>StripePlan__c</referenceTo>
    <relationshipName>StripeSubscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>