force-app/main/default/objects/StripeSubscription__c/fields/StripePlanAmount__c.field-meta.xml
<CustomField>
    <fullName>StripePlanAmount__c</fullName>
    <formula>Plan__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stripe Plan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>