force-app/main/default/objects/StripeSubscription__c/fields/StripeSubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>StripeSubscriptionId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Stripe Subscription</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>