force-app/main/default/objects/StripeSubscription__c/fields/Trial_End__c.field-meta.xml
<CustomField>
    <fullName>Trial_End__c</fullName>
    <label>Trial End</label>
    <type>DateTime</type>
</CustomField>