force-app/main/default/objects/StripeSubscription__c/fields/Trial_Start__c.field-meta.xml
<CustomField>
    <fullName>Trial_Start__c</fullName>
    <label>Trial Start</label>
    <type>DateTime</type>
</CustomField>